# fastapi-skeleton

./: .gitignore  Dockerfile  README.md  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
core/: .env.development  configuration.py  configure_logging.py  database.py  databases.py  main.py  security.py  shared.py
core/models/: __init__.py  user.py
core/routers/: index.py  jwt_auth.py  query.py
