[tool.isort]
profile = "black"

[tool.poetry]
name = "BrainyPedia"
version = "0.1.0"
description = "A large scale computational neuroscience knowledge graphs project"
authors = ["Tek Raj Chhetri <tekraj@mit.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
#richlogging
rich = "13.7.1"
#python-json-logger
python-json-logger = "2.0.7"
# to handle multiple user logging
asgi-correlation-id = "4.3.1"
#logtailhanlder
logtail-python = "0.2.10"
# to handle type annotation 'int | None' future
eval-type-backport = "0.1.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
ruff = "0.4.1"
black = "24.4.0"
isort = "5.13.2"
httpx = "0.27.0"
pytest-mock = "3.14.0"
